<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/workCardView"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="@dimen/work_card_elevation"
        card_view:cardCornerRadius="@dimen/work_card_corner_radius"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/work_container_padding">

            <TextView
                android:id="@+id/jobTitleText"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/work_title_height"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@android:color/black"
                tools:text="Mobile Developer" />

            <ImageView
                android:id="@+id/companyImage"
                android:layout_width="@dimen/work_image_size"
                android:layout_height="@dimen/work_image_size"
                android:layout_marginTop="@dimen/work_image_margin_top"
                android:layout_below="@+id/jobTitleText"
                android:src="@drawable/ic_desktop"
                tools:ignore="ContentDescription"/>

            <LinearLayout
                android:id="@+id/companyContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/companyImage"
                android:layout_below="@id/jobTitleText"
                android:layout_marginTop="@dimen/work_company_margin_top"
                android:layout_marginStart="@dimen/work_container_margin_start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:paddingEnd="@dimen/personal_label_end_padding"
                    android:text="@string/work_company_label" />

                <TextView
                    android:id="@+id/companyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    tools:text="A.C.M.E. SA"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/companyImage"
                android:layout_below="@id/companyContainer"
                android:layout_marginStart="@dimen/work_container_margin_start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:paddingEnd="@dimen/personal_label_end_padding"
                    android:text="@string/work_location_label" />

                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    tools:text="CDMX, México"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/durationContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/companyImage"
                android:layout_below="@id/locationContainer"
                android:layout_marginStart="@dimen/work_container_margin_start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:paddingEnd="@dimen/personal_label_end_padding"
                    android:text="@string/work_period_label" />

                <TextView
                    android:id="@+id/periodText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    tools:text="June 2016 – December 2019"/>

            </LinearLayout>

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/companyImage"
                android:layout_marginTop="@dimen/work_description_margin_top"
                android:textSize="@dimen/normal_text_size"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>